--- a/app/src/main/res/drawable/shape_capsule_border.xml
+++ b/app/src/main/res/drawable/shape_capsule_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="6px" android:color="@android:color/holo_blue_light"/>
-    <corners android:radius="40dp" />
+    <stroke android:width="4px" android:color="@color/colorThemeBlue"/>
+    <corners android:radius="50dp" />
 </shape>
