--- a/app/src/main/res/layout/account_item_row_layout.xml
+++ b/app/src/main/res/layout/account_item_row_layout.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:animateLayoutChanges="true">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_account_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/colorActiveAccount"
         app:cardCornerRadius="5dp"
