--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,14 +13,15 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="true"
+            android:orientation="vertical">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView5"
@@ -64,65 +65,72 @@
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/button_sleep_timer"
-                android:layout_width="wrap_content"
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_weight="0"
-                android:background="@drawable/shape_capsule_border"
-                android:clickable="true"
-                android:drawableLeft="@drawable/ic_timer_black_24dp"
-                android:drawablePadding="8dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingLeft="16dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="8dp"
-                android:text="Sleep Timer"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorThemeBlue"
-                app:layout_constraintEnd_toStartOf="@+id/button_incognito"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView5" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/button_incognito"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="0"
-                android:background="@drawable/shape_capsule_border"
-                android:clickable="true"
-                android:drawableLeft="@drawable/ic_incognito"
-                android:drawablePadding="8dp"
-                android:gravity="center"
-                android:paddingStart="16dp"
-                android:paddingLeft="16dp"
-                android:paddingTop="8dp"
-                android:paddingEnd="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="8dp"
-                android:text="Incognito"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                android:textColor="@color/colorThemeBlue"
-                app:layout_constraintBottom_toBottomOf="@+id/button_sleep_timer"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_sleep_timer"
-                app:layout_constraintTop_toTopOf="@+id/button_sleep_timer" />
+                <TextView
+                    android:id="@+id/button_sleep_timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="0"
+                    android:background="@drawable/shape_capsule_border"
+                    android:clickable="true"
+                    android:drawableLeft="@drawable/ic_timer_black_24dp"
+                    android:drawablePadding="8dp"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:paddingStart="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="8dp"
+                    android:text="Sleep Timer"
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:textColor="@color/colorThemeBlue"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button_incognito"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/button_incognito"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_weight="0"
+                    android:background="@drawable/shape_capsule_border"
+                    android:clickable="true"
+                    android:drawableLeft="@drawable/ic_incognito"
+                    android:drawablePadding="8dp"
+                    android:gravity="center"
+                    android:paddingStart="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="8dp"
+                    android:text="Incognito"
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:textColor="@color/colorThemeBlue"
+                    app:layout_constraintBottom_toBottomOf="@+id/button_sleep_timer"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/button_sleep_timer"
+                    app:layout_constraintTop_toTopOf="@+id/button_sleep_timer" />
+            </android.support.constraint.ConstraintLayout>
 
             <TextView
                 android:id="@+id/text_home_displayname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 android:text="Hello, Yaswant"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:textSize="20sp"
@@ -220,17 +228,16 @@
                 android:id="@+id/rv_accounts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginBottom="128dp"
                 android:animateLayoutChanges="false"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView"
-                tools:listitem="@layout/account_row_layout" />
+                app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 
     <android.support.v7.widget.CardView
@@ -239,6 +246,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
+        app:cardBackgroundColor="@color/colorThemeGrey"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="false"
         app:layout_dodgeInsetEdges="bottom">
