--- a/app/src/main/res/layout/fragment_bottom_sheet_input.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_input.xml
@@ -13,6 +13,16 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <TextView
+            android:id="@+id/text_input_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="New account"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/input_newuser_username"
             style="@style/OneclickInputStyle"
@@ -54,6 +64,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_close_black_24dp" />
 
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5041322" />
+
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_newuser_done"
                 android:layout_width="wrap_content"
@@ -69,14 +86,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_done_white_48dp" />
+                app:srcCompat="@drawable/ic_chevron_right_white_24dp" />
 
-            <android.support.constraint.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5041322" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
